# books

./: .gitignore  book-recommender-system.ipynb  pyproject.toml  requirements.txt
api/: index.py
backend/: requirements.txt
backend/app/: main.py
backend/app/api/: admin.py  analytics.py  auth.py  books.py  chat.py  recommendations.py  search.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: models.py
deployment/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  nginx.conf
documentation/: Architecture.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
ml/: evaluation.py  indexer.py  pipeline.py  requirements.txt
test/: README.md  accuracy_analysis_notebook.ipynb  generate_accuracy_report.py  test_accuracy.py  test_api.py  test_cross_validation.py  test_precision_recall.py
test/reports/: accuracy_report.html
