[project]
name = "book-recommendation"
version = "0.1.0"
description = "NextGen Reads AI Recommendation System & RAG Platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "pydantic>=2.6.0",
    "sqlalchemy>=2.0.0",
    "passlib>=1.7.4",
    "pyjwt>=2.8.0",
    "python-multipart>=0.0.9",
    "pandas>=2.0.0",
    "numpy>=1.24.0"
]

[tool.vercel]
entrypoint = "backend/app/main.py"
